@@ -1,3 +1,9 @@
+2009-11-19  Jeffrey Stedfast  <fejj@novell.com>
+
+	* uri.cpp (Parse): Lowercase the hostname and remove the port if
+	it is identical to the default port for the protocol as per the
+	documentation on the Uri class on MSDN.
+
 2009-11-19  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* deployment.cpp: Update comment (it's not incomplete anymore)
